feat: add woff2 support

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="/favicon.png" />
+  <script src="https://unpkg.com/wawoff2@2.0.1/build/decompress_binding.js"></script>
   <title>IconFont Tools</title>
 </head>
 
